--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # [Recommended for local deployments] Backend API key for OpenAI, so that users don't need one (UI > this > '')
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 # [Not needed] Set the backend host for the OpenAI API, to enable platforms such as Helicone (UI > this > api.openai.com)
 OPENAI_API_HOST=
 # [Not needed] Sets the "OpenAI-Organization" header field to support organization users (UI > this > '')
